# piz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ZH.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
homebrew/: piz.rb
src/: cache.rs  chat.rs  cli.rs  config.rs  context.rs  danger.rs  executor.rs  explain.rs  fix.rs  history.rs  i18n.rs  main.rs  shell_init.rs  ui.rs
src/llm/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
tests/: integration.rs  manual_test.ps1  manual_test.sh
