[package]
name = "piz"
version = "0.2.2"
edition = "2021"
authors = ["AriesOxO"]
description = "Intelligent terminal command assistant - translate natural language to shell commands"
license = "MIT"
repository = "https://github.com/AriesOxO/piz"
homepage = "https://github.com/AriesOxO/piz"
keywords = ["cli", "ai", "terminal", "shell", "llm"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
colored = "2"
dialoguer = "0.11"
sha2 = "0.10"
dirs = "5"
regex = "1"
anyhow = "1"
thiserror = "1"
indicatif = "0.17"
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Globalization"] }

[package.metadata.deb]
section = "utils"
assets = [
    ["target/release/piz", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/piz/", "644"],
    ["LICENSE", "usr/share/doc/piz/", "644"],
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
toml = "0.8"
